Sat Dec  7 11:34:39 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (am_install_var): Quote $ in regexp substitution.
	From Ulrich Drepper.

Fri Dec  6 18:54:10 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Require actual input files, not
	rewritten input files.  From Ulrich Drepper.

Thu Dec  5 02:52:20 1996  Tom Tromey  <tromey@cygnus.com>

	Suggestion from Mark Galassi:
	* texinfos.am (DVIPS): New macro.
	(.dvi.ps): New rule.

	* automake.in (handle_dependencies): Check to make sure
	--build-directory specified before searching for .P files.
	(handle_configure): Correctly handle ":" syntax when running
	config.status.

	* remake.am: Removed rules to regenerate Makefile and Makefile.in;
	now handled by handle_configure.

	* remake-subd.am: Removed.

	* automake.in (scan_configure): Handle multiple ":"s in AC_OUTPUT
	arg.
	(parse_arguments): Ditto.
	(handle_configure): Ditto.
	(%other_output_files): Removed.
	(rewrite_inputs_into_dependencies): New sub.
	(handle_configure): Use it.
	(handle_configure): Ditto.

	From Gord Matzigkeit:
	* automake.in (generate_makefile): Handle ":" in AC_OUTPUT arg.
	(handle_configure): Ditto.

	* automake.in (handle_single_transform_list): .S is assembly
	source.  From Anthony Green.

	* automake.in (handle_single_transform_list): Correctly rewrite
	C++ and Fortran source to objects ending in ".o".  Test
	cxxo.test.

	* automake.in: Better error message if file missing.

	* aclocal.in (@obsolete_macros): ud_GNU_GETTEXT is obsolete.
	* automake.in (handle_gettext): Use AM_GNU_GETTEXT, not
	ud_GNU_GETTEXT.
	(scan_configure): Ditto.  ud_GNU_GETTEXT is now obsolete.

Wed Dec  4 00:41:23 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_configure): Skip empty elements when adding to
	libsources.  Perl 4 bug reported by Greg A Woods.

	* Makefile.am (perl4-check): New target.
	(cvs-dist): Run perl4-check.

	Perl 4 fixes.  Reported by Greg A. Woods: