@@ -2179,8 +2179,8 @@ sub handle_dependencies
 	    &push_phony_cleaners ('depend');
 	    $output_rules .=
 		&file_contents_with_transform ('s/\@EXT\@/.c/g;'
-					       . 's/\@MKDEP\@/MKDEP/g'
-					       . 's/^ONLYC//g',
+					       . 's/\@MKDEP\@/MKDEP/g;'
+					       . 's/^ONLYC//g;',
 					       'depend2');
 	    local ($ext);
 	    local ($need_cxx) = 0;
@@ -2188,7 +2188,7 @@ sub handle_dependencies
 	    {
 		$output_rules .=
 		    &file_contents_with_transform ('s/\@EXT\@/' . $ext .'/g;'
-						   . 's/\@MKDEP\@/CXXMKDEP/g'
+						   . 's/\@MKDEP\@/CXXMKDEP/g;'
 						   . 's/^ONLYC.*$//;',
 						   'depend2');
 		$need_cxx = 1;
