@@ -1,5 +1,8 @@
 Sat Dec  7 11:34:39 1996  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_dependencies): Added some missing ";"s in
+	transforms.
+
 	* automake.in (am_install_var): Quote $ in regexp substitution.
 	From Ulrich Drepper.
 
